--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "agora-access-token": "2.0.4",
     "dotenv": "16.0.3",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "mongoose": "^7.2.2"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
