--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "agora-access-token": "2.0.4",
+    "body-parser": "^1.20.2",
     "dotenv": "16.0.3",
     "express": "4.18.2",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
